src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Primary_Street__c</fullName>
        <formula>IF ( ISPICKVAL ( Primary_Address__c, &quot;No Mail&quot; ) , &quot;&quot; ,
IF ( AND ( OtherStreet = &quot;&quot; , OtherCity = &quot;&quot; , OtherState = &quot;&quot; ) , MailingStreet , IF ( AND ( MailingStreet = &quot;&quot; , MailingCity = &quot;&quot; , MailingState = &quot;&quot; ) , OtherStreet , IF ( ISPICKVAL ( Primary_Address__c, &quot;Home&quot; ) , OtherStreet, MailingStreet ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary Street Address</inlineHelpText>
        <label>Primary Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Interest__c</fullName>
        <label>Program Interest</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Level__c</fullName>
        <description>Level of Prospect. Calculated based on Total Gifts fields unless Overridden in Override Prospect field.  Change formula to embody client&apos;s donation level rules.</description>
        <formula>CASE( Override_Prospect_Level__c, 
&apos;Do Not Override&apos;, IF( ISNULL( TotalOppAmount__c ),&apos;&apos;, 
IF(  OppAmountLastYear__c  &gt;= 250 ||  OppAmountThisYear__c  &gt;= 250 ,&apos;Major Donor&apos;, 
IF(OppAmountLastYear__c  = 0 &amp;&amp; OppAmountThisYear__c  = 0, &apos;Lapsed Donor&apos;, &apos;Donor&apos;))), 
&apos;Donor&apos;, &apos;Donor&apos;, 
&apos;Major Donor&apos;, &apos;Major Donor&apos;, 
&apos;New Override Value - Must be Added to Formula in field Prospect Level&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Level of Prospect. Calculated based on Total Gifts fields unless Overridden in Override Prospect Level field.</inlineHelpText>
        <label>Prospect Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondContactEmail__c</fullName>
        <label>Second Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SecondContactFirstName__c</fullName>
        <label>Second Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondContactLastName__c</fullName>
        <label>Second Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondContactSalutation__c</fullName>
        <label>Second Contact Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Senate__c</fullName>
        <inlineHelpText>State Senate legislative district (where different from state House district)</inlineHelpText>
        <label>Voter State Senate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Household_Gifts__c</fullName>
        <formula>ONEN_Household__r.TotalOppAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voted_General_2004__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voted General 2004</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voted_General_2005__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voted General 2005</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voted_General_2006__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voted General 2006</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voted_Primary_2004__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voted Primary 2004</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voted_Primary_2005__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voted Primary 2005</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voted_Primary_2006__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voted Primary 2006</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voter_Absentee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voter Absentee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voter_Age_Group__c</fullName>
        <label>Voter Age Group</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Age__c</fullName>
        <label>Voter Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voter_CPN_Amount__c</fullName>
        <inlineHelpText>Voter&apos;s campaign donation amount</inlineHelpText>
        <label>Voter CPN Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voter_CPN_Contributions__c</fullName>
        <inlineHelpText>Number of voter&apos;s campaign contributions</inlineHelpText>
        <label>Voter CPN Contributions</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voter_Census_Block__c</fullName>
        <label>Voter Census Block</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voter_Census_Tract__c</fullName>
        <label>Voter Census Tract</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voter_City__c</fullName>
        <label>Voter City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Country__c</fullName>
        <label>Voter Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_County__c</fullName>
        <label>Voter County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Data_Run_Date__c</fullName>
        <label>Voter Data Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voter_Date_of_Birth__c</fullName>
        <label>Voter Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voter_Elections__c</fullName>
        <label>Voter Elections</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voter_Email__c</fullName>
        <label>Voter Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_First_Name__c</fullName>
        <label>Voter First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Gender__c</fullName>
        <label>Voter Gender</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Household_Income__c</fullName>
        <label>Voter Household Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voter_ID__c</fullName>
        <label>Voter ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Index__c</fullName>
        <label>Voter Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voter_Last_Name__c</fullName>
        <label>Voter Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Latitude__c</fullName>
        <label>Voter Latitude</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voter_Leg_District__c</fullName>
        <inlineHelpText>State legislative district (House)</inlineHelpText>
        <label>Voter Leg District</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voter_Longitude__c</fullName>
        <label>Voter Longitude</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voter_Middle_Name__c</fullName>
        <label>Voter Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Phone__c</fullName>
        <label>Voter Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Voter_Precinct__c</fullName>
        <label>Voter Precinct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Registration_Date__c</fullName>
        <label>Voter Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voter_School_District__c</fullName>
        <label>Voter School District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_State__c</fullName>
        <label>Voter State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Status__c</fullName>
        <formula>IF(Voter_Vote_Count__c &gt;0, &quot;Voter&quot;, &quot;Non-Voter&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Voter Vote Count &gt; 0, they are a voter</inlineHelpText>
        <label>Voter Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Street__c</fullName>
        <label>Voter Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voter_Vote_Count__c</fullName>
        <label>Voter Vote Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voter_Zip__c</fullName>
        <label>Voter Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_County__c</fullName>
        <label>Work County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Donors</fullName>
        <columns>FULL_NAME</columns>
        <columns>OppAmountLastNDays__c</columns>
        <columns>OppAmountThisYear__c</columns>
        <columns>OppAmountLastYear__c</columns>
        <columns>NumberOfClosedOpps__c</columns>
        <columns>LastCloseDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TotalOppAmount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Donors</label>
    </listViews>
    <listViews>
        <fullName>Engagement_Level_0</fullName>
        <columns>FULL_NAME</columns>
        <columns>Engagement_Level__c</columns>
        <columns>Engagement_Peak__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Engagement_Peak_Numeric__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Engagement Level 0</label>
    </listViews>
    <listViews>
        <fullName>Male_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gender__c</field>
            <operation>startsWith</operation>
            <value>M</value>
        </filters>
        <label>Male Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <validationRules>
        <fullName>Not_former_and_current_board</fullName>
        <active>true</active>
        <errorConditionFormula>AND (  Former_Board_Member__c , Board_Member__c )</errorConditionFormula>
        <errorDisplayField>Board_Member__c</errorDisplayField>
        <errorMessage>A contact cannot be both a Board Member and a Former Board Member</errorMessage>
    </validationRules>
</CustomObject>